<resources>
    <string name="app_name">MoPubDemo</string>

    <string name="nav_ad_unit">Ad Units</string>
    <string name="nav_ads">Ad Sizes</string>

    <string name="ad_unit_id_default_banner">e789c016a7344c6b98ecebd04beddf27</string>
    <string name="ad_unit_id_default_mrect">76624a0451f8483ba54a28a74b11bba3</string>
    <string name="ad_unit_id_default_leaderboard">fefcb04d726d4464a5d5f2cf3eaad33c</string>
    <string name="ad_unit_id_default_interstitial">82151acc4e464e079809320eca2c520a</string>

    <string name="ad_unit_name_default_banner">Default Banner</string>
    <string name="ad_unit_name_default_mrect">Default Medium</string>
    <string name="ad_unit_name_default_leaderboard">Default Leaderboard</string>
    <string name="ad_unit_name_default_interstitial">Default Interstitial</string>

    <string name="ad_size_banner">Banner (320 x 50)</string>
    <string name="ad_size_banner_simple">Banner</string>
    <string name="ad_size_mrect">Medium (300 x 250)</string>
    <string name="ad_size_mrect_simple">Medium</string>
    <string name="ad_size_leaderboard">Leaderboard (728 x 90)</string>
    <string name="ad_size_leaderboard_simple">Leaderboard</string>
    <string name="ad_size_interstitial">Interstitial (Fullscreen)</string>
    <string name="ad_size_interstitial_simple">Interstitial</string>

    <array name="ad_sizes">
        <item>@string/ad_size_banner</item>
        <item>@string/ad_size_mrect</item>
        <item>@string/ad_size_leaderboard</item>
        <item>@string/ad_size_interstitial</item>
    </array>

    <string name="mopub_version">MoPub Version:</string>

    <string name="error_label">Error:</string>

    <string name="ad_unit_name">Ad unit name:</string>
    <string name="ad_unit_size">Size:</string>
    <string name="ad_unit_id">Ad unit id:</string>

    <string name="hint_ad_unit_name">Ad unit name</string>
    <string name="hint_ad_unit_id">Ad unit id</string>

    <string name="symbol_empty">" - "</string>

    <string name="action_request_ad">Request ad</string>
    <string name="action_edit">Edit</string>
    <string name="action_remove">Remove</string>
    <string name="action_insert">Insert</string>
    <string name="action_accept">Accept</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_show">Show</string>

    <string name="title_insert_ad_unit">Insert Ad Unit</string>
    <string name="title_edit_ad_unit">Edit Ad Unit</string>
    <string name="error_field_validation">The inserted data is not valid.</string>

    <string name="confirmation_edit">Please confirm you want to edit the selected ad unit id.</string>
    <string name="confirmation_remove">Please confirm you want to remove the selected ad unit id.</string>
</resources>
