<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/layout_ad_unit_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal"
            android:weightSum="1">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:text="@string/ad_unit_name"
                    android:textColor="@color/primary_dark"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/view_ad_unit_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_marginLeft="2dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="4dp"
                    android:layout_marginRight="4dp"
                    android:text="@string/symbol_empty"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:text="@string/ad_unit_size"
                    android:textColor="@color/primary_dark"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/view_ad_unit_size"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_marginLeft="2dp"
                    android:layout_marginTop="4dp"
                    android:text="@string/symbol_empty"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            android:maxLines="1"
            android:text="@string/ad_unit_id"
            android:textColor="@color/primary_dark"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/view_ad_unit_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="18dp"
            android:text="@string/symbol_empty"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button_request"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/action_request_ad" />

        <Button
            android:id="@+id/button_show_interstitial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/action_show"
            android:visibility="gone" />

        <TextView
            android:id="@+id/view_error_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="18dp"
            android:text="@string/error_label"
            android:textColor="@color/primary_dark"
            android:textSize="12sp"
            android:visibility="gone"
            />

        <TextView
            android:id="@+id/view_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="18dp"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:visibility="gone"
            />

        <com.mopub.mobileads.MoPubView
            android:id="@+id/ad_banner"
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:visibility="gone" />

        <com.mopub.mobileads.MoPubView
            android:id="@+id/ad_mrect"
            android:layout_width="300dp"
            android:layout_height="250dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:visibility="gone" />

        <com.mopub.mobileads.MoPubView
            android:id="@+id/ad_leaderboard"
            android:layout_width="728dp"
            android:layout_height="90dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:visibility="gone" />
    </LinearLayout>

</ScrollView>